# TreeSitterCppWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TreeSitterCppWrapper.pro
include/: CTSLanguage.h  CTSNode.h  CTSParser.h  CTSQuery.h  CTSQueryCursor.h  CTSTree.h  TSWrapperLib.h
src/: CTSLanguage.cpp  CTSNode.cpp  CTSParser.cpp  CTSQuery.cpp  CTSQueryCursor.cpp  CTSTree.cpp
